# raytracer

./: CMakeLists.txt  camera.h  color.h  compile_commands.json  constants.h  hittable.h  hittable_list.h  interval.h  main.cpp  make.cc  material.h  ray.h  sphere.h  utils.h  vec3.h
.cache/clangd/index/: camera.h.C2BF8BD1F036C31A.idx  color.h.958B74905B88B335.idx  constants.h.BEA030759A6AF70A.idx  hittable.h.0ABCCBCC64F872AF.idx  hittable_list.h.D683449177B78E8F.idx  interval.h.900CEFA27E521B53.idx  main.cpp.83ECD8EB2B77AB51.idx  material.h.584DABD430816715.idx  ray.h.C45AF77705B6A4EA.idx  sphere.h.BBE11B0EFD498F30.idx  utils.h.FC2BE0E29F135CF3.idx  vec3.h.10ECFA827E64F4A8.idx
